--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,5 +1,3 @@
-@import "~bulma/sass/utilities/initial-variables"
-
 // Config vars
 // Kalidi logo brand color: #FD461E
 $kaldi-red: #D64000
@@ -44,4 +42,13 @@ $body-color: #333
 .margin-top-0
   margin-top: 0 !important
 
+  body
+    background-color: #fff
+    border-top: 6px solid #231f20
+    margin: 0
+    padding-top: 6px
+    overflow-x: hidden
+
 @import "~bulma"
+
+
