--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,9 +10,12 @@ $kaldi-red: #D64000
 $kaldi-red-invert: #fff
 $dark: #231f20
 
-$primary: $kaldi-red
+$primary: $dark
 $primary-invert: $kaldi-red-invert
 $body-color: #333
+
+$family-sans-serif: 'Source Serif Pro', serif
+$footer-background-color: $dark
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -49,12 +52,19 @@ $body-color: #333
 .margin-top-0
   margin-top: 0 !important
 
+.navbar-item .icon
+  color: $primary
+// Override for use of svg's from https://simpleicons.org/
+.icon svg
+  width: 1.5rem
+  height: 1.5rem
+  fill: currentColor
+
+
 body
-  background-color: #fff
   border-top: 6px solid #231f20
   margin: 0
   padding-top: 6px
-  overflow-x: hidden
 
 @import "~bulma"
 
