--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -62,6 +62,9 @@ $footer-background-color: $dark
   height: 1.5rem
   fill: currentColor
 
+footer
+  color: $white-ter
+  
 .social
   padding: 2em
 
@@ -76,13 +79,22 @@ $footer-background-color: $dark
     display: inline
 
 body
-  border-top: 6px solid #231f20
+  border-top: 6px solid $dark
   margin: 0
   padding-top: 6px
 
 .post-overview
-  border-top: 1px solid #231f20
+  border-top: 1px solid $dark
   padding-top: 1em
+  &:hover
+    border-top: 2px solid $dark
+
+.post-overview-excerpt
+  font-style: italic
+
+.post-overview-title
+  font: 400 18px/1.4 Georgia, serif
+  margin: 1em 0
 
 @import "~bulma"
 
