--- a/src/components/FeaturedBlogPost/featuredBlogPost.sass
+++ b/src/components/FeaturedBlogPost/featuredBlogPost.sass
@@ -10,11 +10,12 @@
     display: block
     margin: 0 0 2rem
     background-position: right bottom
-    background-size: cover
+    // background-size: cover
     min-height: 400px
     position: relative
     color: white
     width: 100%
+    border: 1px solid $dark
     .featured-title
         padding: 1em
         position: absolute
@@ -22,12 +23,12 @@
         font-size: 1em
         line-height: 1.3
         max-width: 60%
-        background-color: #231f20
+        background-color: $dark
         h2
             line-height: 2em
             color: white
             margin: 0 0 1rem
     .feature-dark
-        background-color:#231f20
+        background-color: $dark
         color:#fff
-        text-shadow: 2px 2px #231f20,2px 2px 10px #231f20,2px 2px 20px #231f20
+        text-shadow: 2px 2px $dark,2px 2px 10px $dark,2px 2px 20px $dark
