Update footer and markdown files for cars

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -12,7 +12,7 @@ $primary: $dark
 $primary-invert: $kaldi-red-invert
 $body-color: #333
 
-//$family-sans-serif: 'Source Serif Pro', serif
+$family-sans-serif: 'Source Serif Pro', serif
 $family-secondary: 'Source Serif Pro'
 $footer-background-color: $dark
 $border-dotted: dotted $dark
@@ -22,7 +22,7 @@ $border-transparent: solid transparent
 @import "~bulma"
 
 a.navbar-item
-  font-family: $family-secondary
+  font-family: $family-primary
   border-bottom: 2px $border-transparent
   &:hover
     border-bottom: 2px $border-solid
