refactor: add new blogpost component

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -95,19 +95,6 @@ body
   p 
     font-size: 18px
 
-.post-overview
-  border-top: 1px $border-solid
-  padding-top: 1em
-  &:hover
-    border-top: 2px $border-solid
-
-.post-overview-excerpt
-  font-style: italic
-
-.post-overview-title
-  font: 400 18px/1.4 Georgia, serif
-  margin: 1em 0
-
 .home-hero
   font-size: $size-4
   font-style: italic
@@ -136,3 +123,6 @@ body
       flex: 1 0 20px
   &:after
     margin: 0 0 20px 20px
+
+h1, h2, h3, h4, h5, h6
+  font-family: $family-secondary
