task: update the main font choices for the site

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -12,8 +12,8 @@ $primary: $dark
 $primary-invert: $kaldi-red-invert
 $body-color: #333
 
-$family-sans-serif: 'Quicksand', serif
-$family-secondary: 'Source Serif Pro'
+$family-sans-serif: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$family-secondary: 'Roboto Condensed'
 $footer-background-color: $dark
 $border-dotted: dotted $dark
 $border-solid: solid $dark
