--- a/src/components/customVariables.sass
+++ b/src/components/customVariables.sass
@@ -2,4 +2,4 @@ $dark: #231f20
 $border-dotted: dotted $dark
 $border-solid: solid $dark
 $border-transparent: solid transparent
-$family-secondary: 'Source Serif Pro'
+$family-secondary: 'Roboto Condensed'
