task: fix featured blog post CSS issue

--- a/src/components/FeaturedBlogPost/featuredBlogPost.sass
+++ b/src/components/FeaturedBlogPost/featuredBlogPost.sass
@@ -9,7 +9,9 @@
             color: white
     display: block
     margin: 0 0 2rem
-    background-position: right bottom
+    background-position: center center
+    background-repeat: no-repeat
+    background-size: 100% auto
     // background-size: cover
     min-height: 400px
     position: relative
